--- a/styles/Title.module.css
+++ b/styles/Title.module.css
@@ -56,21 +56,25 @@
 
 @media screen and (max-width: 780px) {
     .title {
-        margin: 0 0 0 40px ;
+        margin: 0 0 0 0;
         transform: scale(0.9);
         width: 100%;
+        /* padding: 0 0 0 40px; */
     }
+    
     .body {
         font-size: 18px;
+        margin: 0 20px 20px 0;
     }
 }
 
 @media screen and (max-width: 400px) {
     .title {
-        width: 100%;
+        width: 90%;
         margin: 10px;
     }
     .body {
         width: 100%;
+        margin: 0 20px 20px 0;
     }
 }
